@@ -1,101 +1,109 @@
 package theme
 
-import com.sun.jna.Native
-import com.sun.jna.Pointer
-import com.sun.jna.platform.win32.Advapi32
-import com.sun.jna.platform.win32.Advapi32Util
-import com.sun.jna.platform.win32.WinDef
-import com.sun.jna.platform.win32.WinDef.HWND
-import com.sun.jna.platform.win32.WinError
-import com.sun.jna.platform.win32.WinNT
-import com.sun.jna.platform.win32.WinReg
-import com.sun.jna.win32.StdCallLibrary
 import kotlinx.coroutines.currentCoroutineContext
+import kotlinx.coroutines.delay
 import kotlinx.coroutines.isActive
+import java.lang.foreign.Arena
+import java.lang.foreign.FunctionDescriptor
+import java.lang.foreign.Linker
+import java.lang.foreign.MemorySegment
+import java.lang.foreign.SymbolLookup
+import java.lang.foreign.ValueLayout
+import java.lang.invoke.MethodHandle
 
 object WindowsThemeManager {
-    private const val REGISTRY_KEY_PATH = "Software\\Microsoft\\Windows\\CurrentVersion\\Themes\\Personalize"
+    private const val REGISTRY_KEY_PATH =
+        "HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Themes\\Personalize"
     private const val REGISTRY_VALUE_NAME = "AppsUseLightTheme"
+    private const val POLL_INTERVAL_MS = 1500L
+    private const val DWMWA_USE_IMMERSIVE_DARK_MODE = 20
 
-    private interface DwmApi : StdCallLibrary {
-        fun DwmSetWindowAttribute(
-            hwnd: HWND,
-            dwAttribute: Int,
-            pvAttribute: Pointer,
-            cbAttribute: Int
-        ): Int
-
-        companion object {
-            val INSTANCE: DwmApi by lazy {
-                Native.load("dwmapi", DwmApi::class.java)
-            }
-            const val DWMWA_USE_IMMERSIVE_DARK_MODE = 20
+    // FFM handle for dwmapi!DwmSetWindowAttribute(HWND, DWORD, LPCVOID, DWORD); null if unresolved.
+    private val dwmSetWindowAttribute: MethodHandle? by lazy {
+        try {
+            val sym = SymbolLookup.libraryLookup("dwmapi", Arena.global())
+                .find("DwmSetWindowAttribute").orElseThrow()
+            Linker.nativeLinker().downcallHandle(
+                sym,
+                FunctionDescriptor.of(
+                    ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT,
+                    ValueLayout.ADDRESS, ValueLayout.JAVA_INT,
+                ),
+            )
+        } catch (_: Throwable) {
+            null
         }
     }
 
+    // Reads AppsUseLightTheme via reg.exe; dark == value 0; missing/error => light.
     fun isWindowsDarkTheme(): Boolean {
         return try {
-            val value = Advapi32Util.registryGetIntValue(
-                WinReg.HKEY_CURRENT_USER,
-                REGISTRY_KEY_PATH,
-                REGISTRY_VALUE_NAME
-            )
-            value == 0
+            val process = ProcessBuilder(
+                "reg", "query", REGISTRY_KEY_PATH, "/v", REGISTRY_VALUE_NAME
+            ).redirectErrorStream(true).start()
+            val output = process.inputStream.bufferedReader().use { it.readText() }
+            process.waitFor()
+            val line = output.lineSequence()
+                .firstOrNull { it.contains(REGISTRY_VALUE_NAME) } ?: return false
+            val hexToken = line.trim().split(Regex("\\s+"))
+                .firstOrNull { it.startsWith("0x", ignoreCase = true) } ?: return false
+            hexToken.substring(2).toLongOrNull(16) == 0L
         } catch (_: Exception) {
             false
         }
     }
 
+    // Sets the immersive dark/light title bar via FFM. invokeWithArguments (not the
+    // signature-polymorphic MethodHandle.invoke) keeps this ProGuard-safe.
     fun setWindowsTitleBarTheme(window: java.awt.Window, isDark: Boolean) {
         try {
-            val hwnd = HWND(Native.getComponentPointer(window))
-            val darkModeValue = WinDef.BOOLByReference(WinDef.BOOL(isDark))
-
-            DwmApi.INSTANCE.DwmSetWindowAttribute(
-                hwnd,
-                DwmApi.DWMWA_USE_IMMERSIVE_DARK_MODE,
-                darkModeValue.pointer,
-                4,
-            )
+            val handle = dwmSetWindowAttribute ?: return
+            val hwnd = getHwnd(window)
+            if (hwnd == 0L) return
+            Arena.ofConfined().use { arena ->
+                val pv = arena.allocate(ValueLayout.JAVA_INT)
+                pv.set(ValueLayout.JAVA_INT, 0L, if (isDark) 1 else 0)
+                handle.invokeWithArguments(
+                    MemorySegment.ofAddress(hwnd),
+                    DWMWA_USE_IMMERSIVE_DARK_MODE,
+                    pv,
+                    4,
+                )
+            }
         } catch (_: Throwable) {
         }
     }
 
+    // HWND of an AWT window without JNA (sun.awt.AWTAccessor -> WComponentPeer.getHWnd()).
+    // Needs --add-opens java.desktop/sun.awt{,.windows} (build.gradle.kts); 0 if unavailable.
+    private fun getHwnd(window: java.awt.Window): Long {
+        return try {
+            val componentAccessor = Class.forName("sun.awt.AWTAccessor")
+                .getMethod("getComponentAccessor")
+                .apply { isAccessible = true }
+                .invoke(null)
+            val peer = Class.forName("sun.awt.AWTAccessor\$ComponentAccessor")
+                .getMethod("getPeer", java.awt.Component::class.java)
+                .apply { isAccessible = true }
+                .invoke(componentAccessor, window) ?: return 0L
+            peer.javaClass.getMethod("getHWnd")
+                .apply { isAccessible = true }
+                .invoke(peer) as Long
+        } catch (_: Throwable) {
+            0L
+        }
+    }
+
+    // Polls the theme and fires only on change (replaces the JNA RegNotifyChangeKeyValue listener).
     suspend fun listenWindowsThemeChanges(onThemeChanged: (isDark: Boolean) -> Unit) {
-        val advapi32 = Advapi32.INSTANCE
-        val hKeyByRef = WinReg.HKEYByReference()
-
-        val openResult = advapi32.RegOpenKeyEx(
-            WinReg.HKEY_CURRENT_USER,
-            REGISTRY_KEY_PATH,
-            0,
-            WinNT.KEY_NOTIFY,
-            hKeyByRef,
-        )
-
-        if (openResult != WinError.ERROR_SUCCESS) return
-
-        val hKey = hKeyByRef.value
-        try {
-            while (currentCoroutineContext().isActive) {
-                val notifyResult = advapi32.RegNotifyChangeKeyValue(
-                    hKey,
-                    false,
-                    WinNT.REG_NOTIFY_CHANGE_LAST_SET,
-                    null,
-                    false
-                )
-
-                if (!currentCoroutineContext().isActive) break
-                if (notifyResult == WinError.ERROR_SUCCESS) {
-                    val currentSystemThemeIsDark = isWindowsDarkTheme()
-                    onThemeChanged(currentSystemThemeIsDark)
-                } else {
-                    break
-                }
+        var lastValue = isWindowsDarkTheme()
+        while (currentCoroutineContext().isActive) {
+            val currentValue = isWindowsDarkTheme()
+            if (currentValue != lastValue) {
+                lastValue = currentValue
+                onThemeChanged(currentValue)
             }
-        } finally {
-            advapi32.RegCloseKey(hKey)
+            delay(POLL_INTERVAL_MS)
         }
     }
 }
